# NotificationSystemTestTask

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: pylint.yml
notification_system/client/: admin.py  apps.py  exceptions.py  mediator_service.py  models.py  send_services.py  serializers.py  urls.py  views.py
notification_system/client/migrations/: 0001_initial.py  0002_alter_client_phone.py
notification_system/client/tests/: conftest.py  test_mediator_service.py  test_sending_services.py  test_views.py
notification_system/client/tests/factories/: client_factory.py
notification_system/notification_system/: settings.py  urls.py
